--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+@import './App.scss';
+
+// create-react-app
 body {
   margin: 0;
   padding: 0;
@@ -6,9 +9,29 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  // width: 100vw;
+  // height: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  monospace;
 }
+
+// additions
+body {
+  
+  a {
+    text-decoration: none;
+    color: black;
+    transition: ease-in 250ms;
+  }
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+}
+
+@import './css/media-queries';
