--- a/src/css/_media-queries.scss
+++ b/src/css/_media-queries.scss
@@ -49,6 +49,20 @@
 }
 
 @media (min-width: 1440px) {
+  .header {
+    .header__left {
+
+    }
+    .header__right {
+
+      span, button {
+        margin-right: 2rem;
+        padding: 1rem;
+        font-size: 1.5rem;
+      }
+    }
+  }
+
   .carousel {
     display: flex;
     flex-direction: column;
@@ -57,6 +71,45 @@
     .carousel__img-container {
       max-width: 1440px;
     }
+  
+    .carousel__pagination {
+      
+      .pagination {
+        margin: 1rem;
+        width: 1rem;
+        height: 1rem;
+        margin-right: 1rem;
+
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+
+  .masonry {
+    .masonry__wrapper {
+
+      .masonry__item {
+        margin-bottom: 4rem;
+        
+        .masonry__item-date {
+          font-size: 18px; 
+        }
+    
+        .masonry__item-text {
+          font-size: 18px; 
+
+          a {
+            font-size: 22px;
+          }
+        }
+      }
+    }
+  }
+
+  footer {
+    font-size: 1rem;
   }
 }
 
