--- a/src/css/_media-queries.scss
+++ b/src/css/_media-queries.scss
@@ -10,11 +10,16 @@
     margin-top: $sm-header-height;
     
     .carousel__img {
-      padding: 0 $md-sides-spacing;
-      
-      .carousel__img__date {
-        margin-top: 10px;
+
+      .carousel__img__caption {
+        padding: 0 $md-sides-spacing;
+        top: 10%;
+
+        .carousel__img__date {
+          margin-top: 10px;
+        }
       }
+      
     }
   }
 
@@ -154,18 +159,21 @@
   .carousel {
     
     .carousel__img {
-      padding: 0 $sm-sides-spacing;
 
-      .carousel__img__title {
-        font-size: $md-carousel-lg-font;
-      }
-
-      .carousel__img__date {
-        font-size: $md-carousel-md-font;
-      }
-
-      .carousel__img__details {
-        font-size: $md-carousel-sm-font;
+      .carousel__img__caption {
+        padding: 0 $sm-sides-spacing;
+  
+        .carousel__img__title {
+          font-size: $md-carousel-lg-font;
+        }
+  
+        .carousel__img__date {
+          font-size: $md-carousel-md-font;
+        }
+  
+        .carousel__img__details {
+          font-size: $md-carousel-sm-font;
+        }
       }
     }
   }
